<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity">

    <LinearLayout
        android:id="@+id/introduction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/logoutBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/displayNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:fontFamily="@font/lato"
            android:text="Hi Username"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/color_dist"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical"
            android:paddingBottom="20dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:gravity="center"
                android:text="@string/capture_title"
                android:textColor="@android:color/black"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:text="@string/capture_desc"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:layout_below="@id/introduction"
        android:orientation="vertical">


        <Button
            android:layout_width="310dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/color_btn"
            android:text="@string/most_people"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

        <Button
            android:layout_width="310dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/color_btn"
            android:text="@string/nearest_people"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

    </LinearLayout>

</RelativeLayout>